force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/tc9_pr__Employment_Cost_Exception__c.object-meta.xml
<CustomObject>
    <description>Maintains information relating to Employment Costs at a Payee, Client and Assignment level</description>
    <label>Employment Cost Exception</label>
    <nameField>
        <displayFormat>ECE-{0000000000}</displayFormat>
        <label>Employment Cost Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Cost Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>