force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/fields/tc9_core__Employment_Cost__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Employment_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Employment Cost Exception to a specific Employment Cost only.</description>
    <inlineHelpText>Relates the Employment Cost Exception to a specific Employment Cost only.</inlineHelpText>
    <label>Employment Cost</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Employment_Cost__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agreement Cost</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Employment_Cost__c</referenceTo>
    <relationshipLabel>Employment Cost Exceptions</relationshipLabel>
    <relationshipName>Employment_Cost_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>