force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/fields/tc9_core__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Exception_Type__c</fullName>
    <description>Defines how the exception is applied:
Pay Code — excludes based on the related Pay Code for the Employment Cost.
Worker Type — excludes based on the Worker Type of the Job Role for the Employment Cost.</description>
    <inlineHelpText>Defines how the exception is applied:
Pay Code — excludes based on the related Pay Code for the Employment Cost.
Worker Type — excludes based on the Worker Type of the Job Role for the Employment Cost.</inlineHelpText>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Code</fullName>
            </value>
            <value>
                <fullName>Worker Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>