force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/fields/tc9_core__Worker_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Worker_Type__c</fullName>
    <description>Defines whether the exception applies to Job Roles for an Employee, a Contractor, or applies to All Worker Types.</description>
    <inlineHelpText>Defines whether the exception applies to Job Roles for an Employee, a Contractor, or applies to All Worker Types.</inlineHelpText>
    <label>Worker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_core__Worker_Type</valueSetName>
    </valueSet>
</CustomField>