force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Assignment associated with the Employment Cost Exception</description>
    <inlineHelpText>The Assignment associated with the Employment Cost Exception</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Employment Cost Exceptions</relationshipLabel>
    <relationshipName>Employment_Cost_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>