force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/fields/tc9_pr__Client__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Client associated with the Employment Cost Exception</description>
    <inlineHelpText>The Client associated with the Employment Cost Exception</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment Cost Exceptions</relationshipLabel>
    <relationshipName>Employment_Cost_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>