force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/fields/tc9_pr__Employment_Cost_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employment_Cost_Exempt__c</fullName>
    <description>Dependant on the record type, indicates if the Payee, Client, Assignment or Pay Code is Exempt of the Employment Cost</description>
    <inlineHelpText>Dependant on the record type, indicates if the Payee, Client, Assignment or Pay Code is Exempt of the Employment Cost</inlineHelpText>
    <label>Employment Cost Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>