force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/fields/tc9_pr__Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Pay Code associated with the Employment Cost Exception</description>
    <inlineHelpText>The Pay Code associated with the Employment Cost Exception</inlineHelpText>
    <label>Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Employment Cost Exceptions</relationshipLabel>
    <relationshipName>Employment_Cost_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>