force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/fields/tc9_pr__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Payee associated with the Payee Employment Cost</description>
    <inlineHelpText>The Payee associated with the Payee Employment Cost</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Employment Cost Exceptions</relationshipLabel>
    <relationshipName>Payee_Employment_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>