force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Assignment_Custom_Cost_2.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Assignment_Custom_Cost_2</fullName>
    <active>false</active>
    <description>To be used for Assignment level Employment Cost Exceptions associated with Custom Cost 2</description>
    <label>Assignment Custom Cost 2</label>
</RecordType>