force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Assignment_Insurance.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Assignment_Insurance</fullName>
    <active>false</active>
    <description>To be used for Assignment level Employment Cost Exceptions associated with Insurance</description>
    <label>Assignment Insurance</label>
</RecordType>