force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Assignment_WHS.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Assignment_WHS</fullName>
    <active>false</active>
    <description>To be used for Assignment level Employment Cost Exceptions associated with WHS</description>
    <label>Assignment WHS</label>
</RecordType>