force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Client_Custom_Cost_4.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Client_Custom_Cost_4</fullName>
    <active>false</active>
    <description>To be used for Client level Employment Cost Exceptions associated with Custom Cost 4</description>
    <label>Client Custom Cost 4</label>
</RecordType>