force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Client_Custom_Post_Cost_1.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Client_Custom_Post_Cost_1</fullName>
    <active>false</active>
    <description>To be used for Client level Employment Cost Exceptions associated with Custom Post Cost 1</description>
    <label>Client Custom Post Cost 1</label>
</RecordType>