force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Client_Custom_Post_Cost_2.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Client_Custom_Post_Cost_2</fullName>
    <active>true</active>
    <description>To be used for Client level Employment Cost Exceptions associated with Custom Post Cost 2</description>
    <label>Client Custom Post Cost 2</label>
</RecordType>