force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Client_WHS.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Client_WHS</fullName>
    <active>true</active>
    <description>To be used for Client level Employment Cost Exceptions associated with WHS</description>
    <label>Client WHS</label>
</RecordType>