force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Pay_Code_Custom_Cost_2.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Pay_Code_Custom_Cost_2</fullName>
    <active>true</active>
    <description>To be used for Pay Code level Employment Cost Exceptions associated with Custom Cost 2</description>
    <label>Pay Code Custom Cost 2</label>
</RecordType>