force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Pay_Code_Post_Custom_Cost_1.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Pay_Code_Post_Custom_Cost_1</fullName>
    <active>true</active>
    <description>To be used for Pay Code level Employment Cost Exceptions associated with Custom Post Cost 1</description>
    <label>Pay Code Post Custom Cost 1</label>
</RecordType>