force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Pay_Code_Superannuation.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Pay_Code_Superannuation</fullName>
    <active>true</active>
    <description>To be used for Pay Code level Employment Cost Exceptions associated with Superannuation</description>
    <label>Pay Code Superannuation</label>
</RecordType>