force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Payee_Custom_Cost_1.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payee_Custom_Cost_1</fullName>
    <active>false</active>
    <description>To be used for Payee level Employment Cost Exceptions associated with Custom Cost 1</description>
    <label>Payee Custom Cost 1</label>
</RecordType>