force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Payee_Custom_Post_Cost_3.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payee_Custom_Post_Cost_3</fullName>
    <active>false</active>
    <description>To be used for Payee level Employment Cost Exceptions associated with Custom Post Cost 3</description>
    <label>Payee Custom Post Cost 3</label>
</RecordType>