force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Payee_Insurance.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payee_Insurance</fullName>
    <active>true</active>
    <description>To be used for Payee level Employment Cost Exceptions associated with Insurance</description>
    <label>Payee Insurance</label>
</RecordType>