force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_et__Payee_WHS.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payee_WHS</fullName>
    <active>false</active>
    <description>To be used for Payee level Employment Cost Exceptions associated with WHS</description>
    <label>Payee WHS</label>
</RecordType>