force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_pr__Assignment_Payroll_Tax.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Assignment_Payroll_Tax</fullName>
    <active>true</active>
    <description>To be used for Assignment level Employment Cost Exceptions associated with Payroll Tax</description>
    <label>Assignment Payroll Tax</label>
</RecordType>