force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_pr__Assignment_WorkCover.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Assignment_WorkCover</fullName>
    <active>false</active>
    <description>To be used for Assignment level Employment Cost Exceptions associated with WorkCover</description>
    <label>Assignment WorkCover</label>
</RecordType>