force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_pr__Client_WorkCover.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Client_WorkCover</fullName>
    <active>true</active>
    <description>To be used for Client level Employment Cost Exceptions associated with WorkCover</description>
    <label>Client WorkCover</label>
</RecordType>