force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_pr__Pay_Code_WorkCover.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Pay_Code_WorkCover</fullName>
    <active>true</active>
    <description>To be used for Pay Code level Employment Cost Exceptions associated with WorkCover</description>
    <label>Pay Code WorkCover</label>
</RecordType>