force-app/main/default/objects/tc9_pr__Employment_Cost_Exception__c/recordTypes/tc9_pr__Payee_WorkCover.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payee_WorkCover</fullName>
    <active>true</active>
    <description>To be used for Payee level Employment Cost Exceptions associated with WorkCover</description>
    <label>Payee WorkCover</label>
</RecordType>